Dockerfile.prod fixed

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -4,8 +4,10 @@ WORKDIR /usr/src/app
 COPY package.json ./
 RUN npm install
 COPY ./ ./
-CMD ["npm", "run", "build"]
+# CMD ["npm", "run", "build"]
+RUN npm run build
 
 # Run Stage
 FROM nginx
+EXPOSE 80
 COPY --from=builder /usr/src/app/build /usr/share/nginx/html
